--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <body>
     <header class="cabecalho">
         <div class="container">
-            <span class="cabecalho-hamburguer container-img"></span></span>
+            <input type="checkbox" id="menu" class="container-botao">
+            <label for="menu">
+                <span class="cabecalho-hamburguer container-img"></span></span>
+            </label>
+            <ul class="lista-menu">
+                
+            </ul>
             <img src="imagens/Logo.svg" alt="Logo Alura Books">
         </div>
         
