Evoluindo no curso

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
                 <span class="cabecalho-hamburguer container-img"></span></span>
             </label>
             <ul class="lista-menu">
-                
+               <li class="lista-menu-titulo">Categorias</li>
+               <li class="lista-menu-item"><a href="#" class="lista-menu-link">Programação</a></li>
+               <li class="lista-menu-item"><a href="#" class="lista-menu-link">Front-End</a></li>
+               <li class="lista-menu-item"><a href="#" class="lista-menu-link">Infraestrutura</a></li>
+               <li class="lista-menu-item"><a href="#" class="lista-menu-link">Business</a></li>
+               <li class="lista-menu-item"><a href="#" class="lista-menu-link">Design & UX</a></li>
             </ul>
             <img src="imagens/Logo.svg" alt="Logo Alura Books">
         </div>
@@ -28,5 +33,10 @@
             <a href="#"><img src="imagens/Usuário.svg" alt="Meu perfil" class="container-img"></a>
         </div>
     </header>
+
+    <section class="banner">
+        <h2 class="banner-titulo">Já sabe por onde começar?</h2>
+        <p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    </section>
 </body>
 </html>
